--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: New Ideas for Large-Scale Neurosymbolic Learning Systems 
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-baseurl: "/NILS2025" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username:  
