--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ github_username:
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
