--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: New Ideas for Large-Scale Neurosymbolic Learning Systems 
+title: New Ideas for Large-Scale Neurosymbolic Learning Systems (NILS)
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
